classDiagram
  
  class Consulta{
  -string nombre
  -string descripcion

  +new()
  }


  class Pedido {
    +string Legajo
    +string descripcion
    +string estadoPedido
    +date Fecha
    +string receta
    
    +new()
    +solicitarReceta()
    +abrirPaginaParaingresarLaSolicitud()
    +RevisarFechaReceta()
    +ValidarMPConWebService()
    +MostrarNombreyApellidoMedicoPostValidacion()
    +SolicitarDNIPaciente()
    +ingresarDNIalSAC()
    +MostrardatosdeUsuario()
    +habilitarModificacióndeDatosdecontacto()
    +InformarSiNoestaRegistrado()
    +habilitarBotondeRegistro()
    +ConfirmarSolicitud()
    +AsignarExtraccionista()
    

  }

  class estadoPedido{
  +string nombre
  +string descripcion

  +new()
  }

  class receta{
    +string AnalisisSolicitado
    +string MedicamentoSolicitado
    +date Fecha
    +string nombreMedico
    +int MP

    +new()
  }

  class mediciones{
    +string nombreMedicamento
    +int CantML

    +new()
  }

  class Usuario{
    +string nombre
    +string descripcion
    +string documento
    +string direccion
    +string telefono
    +string email
    +string usuario
    +string contraseña

    +new()
    +presentarReceta()
    +presentarDocumento()
  }


  class ResultadodePedidoMedico {
    +string nombre
    +string descripcion

    +new()
    +EscanearRecetaPDF()
    +InformarAlPacienteQueVayaSalaDeEspera()
    +enviarRecetaalPaciente()
  }


  receta  --> "1..*" ResultadodePedidoMedico : genera
  Usuario  --> "1..*" Consulta : rellena
  Consulta  --> "1..*" Pedido : rellena
  Pedido  --> "1..*" estadoPedido : tiene
  Pedido  --> "1..*" receta : requiere
  receta  --> "1..*" mediciones : tiene
